--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Muskan",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
